[gd_scene load_steps=15 format=3 uid="uid://rrftuntvxt4t"]

[ext_resource type="Script" path="res://scripts/MainGameScripts/egg_opening.gd" id="1_j41yb"]
[ext_resource type="Texture2D" uid="uid://di0q6yu8qbi2u" path="res://images/egg/egg-purple.png" id="2_2t25y"]
[ext_resource type="Script" path="res://scripts/base_classses/egg_entry_class.gd" id="3_n45ee"]
[ext_resource type="Texture2D" uid="uid://gi4ytib73ibf" path="res://images/egg/egg-green.png" id="4_b7spl"]
[ext_resource type="Texture2D" uid="uid://dooy32x4x0qq3" path="res://images/egg/egg-pink.png" id="5_747x5"]
[ext_resource type="Texture2D" uid="uid://bju4ckn3irgd0" path="res://UI stuff/Green Palette/ui_green_box.png" id="6_4e4a6"]
[ext_resource type="Theme" uid="uid://c6pbhcyqdefqk" path="res://themes/monospace_font.tres" id="7_crtsy"]
[ext_resource type="Shader" path="res://shaders/voronoi.gdshader" id="8_cwxax"]
[ext_resource type="Texture2D" uid="uid://b7u6t01tm12vc" path="res://images/transition_img_long.png" id="9_gm1pd"]

[sub_resource type="Resource" id="Resource_xhydc"]
script = ExtResource("3_n45ee")
name = "Purple Egg"
image = ExtResource("2_2t25y")
hatches = Array[String]([])

[sub_resource type="Resource" id="Resource_8kewv"]
script = ExtResource("3_n45ee")
name = "Green Egg"
image = ExtResource("4_b7spl")
hatches = Array[String]([])

[sub_resource type="Resource" id="Resource_hh3r1"]
script = ExtResource("3_n45ee")
name = "Pink Egg"
image = ExtResource("5_747x5")
hatches = Array[String]([])

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8jkob"]
shader = ExtResource("8_cwxax")
shader_parameter/color = Vector4(0, 0, 0, 1)
shader_parameter/pixel_size = 5.0
shader_parameter/scale = 0.6
shader_parameter/speed = 0.05
shader_parameter/layer = 1.0
shader_parameter/opacity = 0.15

[sub_resource type="LabelSettings" id="LabelSettings_0ocei"]
font_size = 24

[node name="EggOpening" type="Node2D"]
script = ExtResource("1_j41yb")
existing_eggs = Array[ExtResource("3_n45ee")]([SubResource("Resource_xhydc"), SubResource("Resource_8kewv"), SubResource("Resource_hh3r1")])
metadata/_edit_vertical_guides_ = [540.0, 64.0, 472.0, 128.0, 408.0]
metadata/_edit_horizontal_guides_ = [675.0, 64.0, 608.0, 128.0, 544.0]

[node name="SelectionAreaold" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 43.0
offset_top = 220.0
offset_right = 498.0
offset_bottom = 372.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="BG" type="NinePatchRect" parent="CanvasLayer"]
offset_right = 1080.0
offset_bottom = 1350.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_4e4a6")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="TitleBox" type="NinePatchRect" parent="CanvasLayer"]
offset_left = 448.0
offset_top = 144.0
offset_right = 1162.0
offset_bottom = 270.0
rotation = 3.14159
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_4e4a6")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/TitleBox"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 698.0
offset_bottom = 110.0
color = Color(0, 0, 0, 0.388235)

[node name="SelectTitle" type="RichTextLabel" parent="CanvasLayer"]
offset_left = 100.0
offset_top = 95.0
offset_right = 439.0
offset_bottom = 135.0
theme = ExtResource("7_crtsy")
bbcode_enabled = true
text = "[font_size=25][center][wave amp=30 freq=-3]%s!"
fit_content = true

[node name="DisplayBox" type="NinePatchRect" parent="CanvasLayer"]
offset_left = 472.0
offset_top = 442.0
offset_right = 1288.0
offset_bottom = 952.0
rotation = 3.14159
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_4e4a6")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="whiteBg" type="ColorRect" parent="CanvasLayer/DisplayBox"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 800.0
offset_bottom = 494.0

[node name="shader" type="ColorRect" parent="CanvasLayer/DisplayBox"]
material = SubResource("ShaderMaterial_8jkob")
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 800.0
offset_bottom = 494.0
color = Color(1, 1, 1, 0.270588)

[node name="EggDescBox" type="NinePatchRect" parent="CanvasLayer"]
offset_left = 446.0
offset_top = 573.0
offset_right = 1160.0
offset_bottom = 740.0
rotation = 3.14159
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_4e4a6")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/EggDescBox"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 698.0
offset_bottom = 151.0
color = Color(0, 0, 0, 0.388235)

[node name="EggDesc" type="RichTextLabel" parent="CanvasLayer"]
offset_left = 98.0
offset_top = 504.0
offset_right = 439.0
offset_bottom = 564.0
theme = ExtResource("7_crtsy")
bbcode_enabled = true
text = "[center]..."

[node name="TransLayer" type="CanvasLayer" parent="CanvasLayer"]
layer = 10

[node name="Transition" type="Sprite2D" parent="CanvasLayer/TransLayer"]
position = Vector2(270, 1200)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_gm1pd")

[node name="BackButton" type="NinePatchRect" parent="CanvasLayer"]
offset_left = 212.0
offset_top = 151.0
offset_right = 442.0
offset_bottom = 221.0
scale = Vector2(0.5, 0.5)
mouse_filter = 0
texture = ExtResource("6_4e4a6")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="Label" type="Label" parent="CanvasLayer/BackButton"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 214.0
offset_bottom = 56.0
theme = ExtResource("7_crtsy")
text = "Back"
label_settings = SubResource("LabelSettings_0ocei")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SelectionArea" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 72.0
offset_top = 249.0
offset_right = 463.0
offset_bottom = 385.0
mouse_filter = 1
